2008-09-08	Joel Sherrill <joel.sherrill@oarcorp.com>

	* mpc8xx/clock/clock.c, mpc8xx/console-generic/console-generic.c,
	mpc8xx/timer/timer.c: Fix nested extern declaration warnings.

2008-09-08	Thomas Doerfler <thomas.doerfler@embedded-brains.de>

	* mpc8xx/clock/clock.c: adapt PIT driver to more complex PLL in
	MPC866 and firends

	* mpc8xx/cpm/cp.c: use correct type for interrupt level
	
2008-09-06	Ralf Corsépius <ralf.corsepius@rtems.org>

	* mpc5xx/irq/irq.c, mpc83xx/spi/mpc83xx_spidrv.c,
	new-exceptions/cpu.c, new-exceptions/raw_exception.h,
	new-exceptions/bspsupport/ppc_exc_hdl.c,
	ppc403/clock/clock.c, ppc403/clock/clock_4xx.c,
	ppc403/console/console.c, ppc403/console/console.c.polled,
	ppc403/console/console405.c, ppc403/tty_drv/tty_drv.c:
	Convert to "bool".

2008-09-05	Joel Sherrill <joel.sherrill@OARcorp.com>

	* mpc5xx/clock/clock.c, mpc6xx/clock/c_clock.c, mpc8260/clock/clock.c,
	mpc8xx/clock/clock.c, ppc403/clock/clock.c, ppc403/clock/clock_4xx.c:
	The Shared Memory Driver no longer requires the special IOCTL in
	Clock_control. This was a hack which has existed since before the
	Classic API Timer Manager was implemented. All implementations of and
	references to Clock_control were removed.

2008-09-05	Joel Sherrill <joel.sherrill@oarcorp.com>

	* mpc6xx/clock/c_clock.c: CLOCK_DRIVER_USE_FAST_IDLE must be checked to
	be equal to 1 -- not just defined.

2008-09-05	Ralf Corsépius <ralf.corsepius@rtems.org>

	* mpc83xx/network/tsec.c, new-exceptions/raw_exception.c:
	Convert to "bool".
	* mpc505/timer/timer.c, mpc5xx/timer/timer.c, mpc6xx/timer/timer.c,
	mpc8260/timer/timer.c, mpc8xx/timer/timer.c, ppc403/timer/timer.c:
	Convert to "bool".

2008-09-02	Ralf Corsépius <ralf.corsepius@rtems.org>

	* mpc83xx/i2c/mpc83xx_i2cdrv.c, mpc8xx/clock/clock.c,
	ppc403/clock/clock.c, ppc403/console/console.c.polled:
	Eliminate rtems_boolean.

2008-08-31	Joel Sherrill <joel.sherrill@oarcorp.com>

	* mpc505/timer/timer.c, mpc5xx/timer/timer.c, mpc6xx/timer/timer.c,